# algo

./: .gitignore  LICENSE  README.md
DSA450/: README.md
DSA450/Array/: CyclicRotation.c++  KthSmallest.c++  MaximumMinimum.c++  ReverseArray.c++  UnionOfArrays.c++
DSA450/LinkedList/: LoopInLinkedList.c++  ReverseLinkedList.c++
DSA450/SearchingAndSorting/: FirstAndLastOccurences.c++
DSA450/Stacks & Queues/: NextGreaterElement.c++  ReverseAStringUsingStack.c++
DSA450/String/: Duplicates.c++  PalindromeString.c++
GeeksForGeeks/Basic/: LargestElementinArray.c++
GeeksForGeeks/Divide&Conquer/: BinarySearch.c++
GeeksForGeeks/Easy/: SumofArrayElements.c++
Leetcode/: README.md
Leetcode/Easy/: Array Partition I.c++  BalancedBinaryTree.py  BinaryTreeInorderTraversal.py  BinaryTreePostorderTraversal.py  BinaryTreePreorderTraversal.py  BuildArrayFromPermutation.c++  ConcatenationOfArray.c++  Contains Duplicate II.py  ContainsDuplicate.c++  FindMaximumAchievableNumber.c++  FindValue.c++  IntersectionOfTwoLinkedLists.py  JewelsAndStones.c++  LinkedList.py  LinkedListCycle.c++  MajorityElement.c++  MaxNestingDepthOfParantheses.c++  MaxSubarraySum.c++  MaximumDepthOfBinaryTree.py  MergeSortedArray.c++  Minimum Index Sum of Two Lists.py  MinimumDepthOfBinaryTree.py  Missing Number.py  ModifyColumns.py  NumberOfGoodPairs.c++  NumberOfRecentCalls.c++  PlusOne.c++  RansomNote.c++  Remove Duplicates from Sorted List.py  RemoveDuplicatesSortedArray.c++  RemoveElement.c++  ReverseLinkedList.c++  (+12 more)
algo/: CMakeLists.txt  main.cpp
algo/include/: stack.hpp
algo/src/: stack.cpp
(+49 files in other folders)
